--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "request-cached-promise",
-  "version": "0.0.2",
-  "description": "promisified http request with caching",
+  "name": "request-plus",
+  "version": "0.0.1",
+  "description": "advanced http client: request + promise + retries + EventEmitter + cache-manager + prom-client",
   "main": "src/index.js",
   "scripts": {
     "test": "./node_modules/jasme/run.js test/indexSpec.js test/*DecoratorSpec.js"
@@ -10,22 +10,26 @@
   "license": "WTFPL",
   "repository": {
     "type": "git",
-    "url": "https://github.com/disjunction/node-request-cached-promise.git"
+    "url": "https://github.com/disjunction/node-request-plus.git"
   },
   "keywords": [
-    "cache",
-    "promise",
     "request",
-    "http",
-    "cache manager"
+    "promise",
+    "retry",
+    "cache-manager",
+    "prometheus",
+    "prom-client",
+    "event emitter"
   ],
-  "dependencies": {
-    "request-promise": "^2.0.1"
-  },
   "devDependencies": {
     "cache-manager": "^1.4.0",
     "eslint": "^3.0.1",
     "jasme": "^4.1.2",
-    "nock": "^7.2.2"
+    "nock": "^7.2.2",
+    "prom-client": "^3.4.6",
+    "request": "^2.73.0"
+  },
+  "dependencies": {
+    "request-promise-native": "^1.0.0"
   }
 }
