--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "advanced http client: request + promise + retries + EventEmitter + cache-manager + prom-client",
   "main": "src/index.js",
   "scripts": {
-    "test": "./node_modules/jasme/run.js test/indexSpec.js test/*DecoratorSpec.js"
+    "test": "./node_modules/jasme/run.js"
   },
   "author": "Konstantin Pogorelov <or@pluseq.com>",
   "license": "WTFPL",
