--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "cache-manager": "^1.4.0",
     "eslint": "^3.0.1",
+    "istanbul": "^0.4.4",
     "jasme": "^4.1.2",
     "nock": "^7.2.2",
     "prom-client": "^3.4.6",
