--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "request-plus",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "advanced http client: request + promise + retries + EventEmitter + cache-manager + prom-client",
   "main": "src/index.js",
   "scripts": {
@@ -19,7 +19,8 @@
     "cache-manager",
     "prometheus",
     "prom-client",
-    "event emitter"
+    "event emitter",
+    "logging"
   ],
   "peerDependencies": {
     "request": ">= 2.34"
