downgrade request, force use 2.75 otherwise timeout test fails

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "jasme": "^5.2.0",
     "nock": "^9.0.2",
     "prom-client": "^6.3.0",
-    "request": "^2.73.0",
+    "request": "2.75.0",
     "rewire": "^2.5.2"
   },
   "dependencies": {
